tests/files/type_checker_tests/should_pass/088.cmdr
//Test set operation type checks
a = 1;
x = [fn () -> false];
x[a] = fn () -> true;
