tests/files/type_checker_tests/should_fail/114.cmdr
//Should fail post-decrement on something of incorrect type
a = [true, false, true];
a[1]--;
